@@ -23,8 +23,7 @@ import com.fasterxml.jackson.databind.InjectableValues;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.RangeSet;
+import com.google.common.collect.Iterables;
 import org.apache.druid.data.input.impl.DimensionsSpec;
 import org.apache.druid.indexer.granularity.GranularitySpec;
 import org.apache.druid.indexer.partitions.DynamicPartitionsSpec;
@@ -41,9 +40,7 @@ import org.apache.druid.segment.transform.CompactionTransformSpec;
 import org.apache.druid.timeline.DataSegment.PruneSpecsHolder;
 import org.apache.druid.timeline.partition.NoneShardSpec;
 import org.apache.druid.timeline.partition.NumberedShardSpec;
-import org.apache.druid.timeline.partition.PartitionChunk;
 import org.apache.druid.timeline.partition.ShardSpec;
-import org.apache.druid.timeline.partition.ShardSpecLookup;
 import org.apache.druid.timeline.partition.TombstoneShardSpec;
 import org.joda.time.Interval;
 import org.junit.Assert;
@@ -64,49 +61,6 @@ public class DataSegmentTest
   private static final ObjectMapper MAPPER = new DefaultObjectMapper();
   private static final int TEST_VERSION = 0x9;
 
-  private static ShardSpec getShardSpec(final int partitionNum)
-  {
-    return new ShardSpec()
-    {
-      @Override
-      public <T> PartitionChunk<T> createChunk(T obj)
-      {
-        return null;
-      }
-
-      @Override
-      public int getPartitionNum()
-      {
-        return partitionNum;
-      }
-
-      @Override
-      public int getNumCorePartitions()
-      {
-        return 0;
-      }
-
-      @Override
-      public ShardSpecLookup getLookup(List<? extends ShardSpec> shardSpecs)
-      {
-        return null;
-      }
-
-      @Override
-      public List<String> getDomainDimensions()
-      {
-        return ImmutableList.of();
-      }
-
-      @Override
-      public boolean possibleInDomain(Map<String, RangeSet<String>> domain)
-      {
-        return true;
-      }
-
-    };
-  }
-
   @Before
   public void setUp()
   {
@@ -116,7 +70,7 @@ public class DataSegmentTest
   }
 
   @Test
-  public void testSerializationWithProjections() throws Exception
+  public void testSerializationWithLatestFormat() throws Exception
   {
     // arrange
     final Interval interval = Intervals.of("2011-10-01/2011-10-02");
@@ -141,14 +95,16 @@ public class DataSegmentTest
                                            .shardSpec(shardSpec)
                                            .lastCompactionState(compactionState)
                                            .binaryVersion(TEST_VERSION)
-                                           .size(1)
+                                           .size(123L)
+                                           .totalRows(12)
                                            .build();
     // act & assert
     final Map<String, Object> objectMap = MAPPER.readValue(
         MAPPER.writeValueAsString(segment),
         JacksonUtils.TYPE_REFERENCE_MAP_STRING_OBJECT
     );
-    Assert.assertEquals(12, objectMap.size());
+    Assert.assertEquals(13, objectMap.size());
+    Assert.assertEquals("something_2011-10-01T00:00:00.000Z_2011-10-02T00:00:00.000Z_1_3", objectMap.get("identifier"));
     Assert.assertEquals("something", objectMap.get("dataSource"));
     Assert.assertEquals(interval.toString(), objectMap.get("interval"));
     Assert.assertEquals("1", objectMap.get("version"));
@@ -161,11 +117,13 @@ public class DataSegmentTest
         objectMap.get("shardSpec")
     );
     Assert.assertEquals(TEST_VERSION, objectMap.get("binaryVersion"));
-    Assert.assertEquals(1, objectMap.get("size"));
+    Assert.assertEquals(123, objectMap.get("size"));
+    Assert.assertEquals(12, objectMap.get("totalRows"));
     Assert.assertEquals(6, ((Map) objectMap.get("lastCompactionState")).size());
     // another act & assert
     DataSegment deserializedSegment = MAPPER.readValue(MAPPER.writeValueAsString(segment), DataSegment.class);
-    assertAllFieldsEquals(segment, deserializedSegment);
+    Assert.assertEquals(segment.toString(), deserializedSegment.toString());
+    Assert.assertEquals(segment, deserializedSegment);
     Assert.assertEquals(0, segment.compareTo(deserializedSegment));
     Assert.assertEquals(0, deserializedSegment.compareTo(segment));
     Assert.assertEquals(segment.hashCode(), deserializedSegment.hashCode());
@@ -178,28 +136,25 @@ public class DataSegmentTest
     final Interval interval = Intervals.of("2011-10-01/2011-10-02");
     final ImmutableMap<String, Object> loadSpec = ImmutableMap.of("something", "or_other");
 
-    DataSegment segment = new DataSegment(
-        "something",
-        interval,
-        "1",
-        loadSpec,
-        Arrays.asList("dim1", "dim2"),
-        Arrays.asList("met1", "met2"),
-        new NumberedShardSpec(3, 0),
-        new CompactionState(
-            new HashedPartitionsSpec(100000, null, ImmutableList.of("dim1")),
-            new DimensionsSpec(
-                DimensionsSpec.getDefaultSchemas(ImmutableList.of("dim1", "bar", "foo"))
-            ),
-            ImmutableList.of(new CountAggregatorFactory("count")),
-            new CompactionTransformSpec(new SelectorDimFilter("dim1", "foo", null)),
-            MAPPER.convertValue(ImmutableMap.of(), IndexSpec.class),
-            MAPPER.convertValue(ImmutableMap.of(), GranularitySpec.class),
-            null
-        ),
-        TEST_VERSION,
-        1
-    );
+    DataSegment segment = DataSegment.builder(SegmentId.of("something", interval, "1", new NumberedShardSpec(3, 0)))
+                                     .loadSpec(loadSpec)
+                                     .dimensions(Arrays.asList("dim1", "dim2"))
+                                     .metrics(Arrays.asList("met1", "met2"))
+                                     .shardSpec(new NumberedShardSpec(3, 0))
+                                     .lastCompactionState(new CompactionState(
+                                         new HashedPartitionsSpec(100000, null, ImmutableList.of("dim1")),
+                                         new DimensionsSpec(
+                                             DimensionsSpec.getDefaultSchemas(ImmutableList.of("dim1", "bar", "foo"))
+                                         ),
+                                         ImmutableList.of(new CountAggregatorFactory("count")),
+                                         new CompactionTransformSpec(new SelectorDimFilter("dim1", "foo", null)),
+                                         MAPPER.convertValue(ImmutableMap.of(), IndexSpec.class),
+                                         MAPPER.convertValue(ImmutableMap.of(), GranularitySpec.class),
+                                         null
+                                     ))
+                                     .binaryVersion(TEST_VERSION)
+                                     .size(1)
+                                     .build();
 
     final Map<String, Object> objectMap = MAPPER.readValue(
         MAPPER.writeValueAsString(segment),
@@ -222,7 +177,8 @@ public class DataSegmentTest
     Assert.assertEquals(6, ((Map) objectMap.get("lastCompactionState")).size());
 
     DataSegment deserializedSegment = MAPPER.readValue(MAPPER.writeValueAsString(segment), DataSegment.class);
-    assertAllFieldsEquals(segment, deserializedSegment);
+    Assert.assertEquals(segment.toString(), deserializedSegment.toString());
+    Assert.assertEquals(segment, deserializedSegment);
     Assert.assertEquals(0, segment.compareTo(deserializedSegment));
     Assert.assertEquals(0, deserializedSegment.compareTo(segment));
     Assert.assertEquals(segment.hashCode(), deserializedSegment.hashCode());
@@ -233,26 +189,23 @@ public class DataSegmentTest
   {
     final Interval interval = Intervals.of("2011-10-01/2011-10-02");
     final ImmutableMap<String, Object> loadSpec = ImmutableMap.of("something", "or_other");
-    DataSegment segment = new DataSegment(
-        "something",
-        interval,
-        "1",
-        loadSpec,
-        Arrays.asList("dim1", "dim2"),
-        Arrays.asList("met1", "met2"),
-        new NumberedShardSpec(3, 0),
-        new CompactionState(
-            new HashedPartitionsSpec(100000, null, ImmutableList.of("dim1")),
-            null,
-            null,
-            null,
-            MAPPER.convertValue(ImmutableMap.of(), IndexSpec.class),
-            MAPPER.convertValue(ImmutableMap.of(), GranularitySpec.class),
-            null
-        ),
-        TEST_VERSION,
-        1
-    );
+    DataSegment segment = DataSegment.builder(SegmentId.of("something", interval, "1", new NumberedShardSpec(3, 0)))
+                                     .loadSpec(loadSpec)
+                                     .dimensions(Arrays.asList("dim1", "dim2"))
+                                     .metrics(Arrays.asList("met1", "met2"))
+                                     .shardSpec(new NumberedShardSpec(3, 0))
+                                     .lastCompactionState(new CompactionState(
+                                         new HashedPartitionsSpec(100000, null, ImmutableList.of("dim1")),
+                                         null,
+                                         null,
+                                         null,
+                                         MAPPER.convertValue(ImmutableMap.of(), IndexSpec.class),
+                                         MAPPER.convertValue(ImmutableMap.of(), GranularitySpec.class),
+                                         null
+                                     ))
+                                     .binaryVersion(TEST_VERSION)
+                                     .size(1)
+                                     .build();
     // lastCompactionState has null specs for dimensionSpec and transformSpec
     String lastCompactionStateWithNullSpecs = "{"
                                               + "\"dataSource\": \"something\","
@@ -304,7 +257,8 @@ public class DataSegmentTest
     Assert.assertEquals(3, ((Map) objectMap.get("lastCompactionState")).size());
 
     DataSegment deserializedSegment = MAPPER.readValue(lastCompactionStateWithNullSpecs, DataSegment.class);
-    assertAllFieldsEquals(segment, deserializedSegment);
+    Assert.assertEquals(segment.toString(), deserializedSegment.toString());
+    Assert.assertEquals(segment, deserializedSegment);
     Assert.assertNotNull(segment.getLastCompactionState());
     Assert.assertNull(segment.getLastCompactionState().getDimensionsSpec());
     Assert.assertNull(segment.getLastCompactionState().getTransformSpec());
@@ -320,12 +274,13 @@ public class DataSegmentTest
   @Test
   public void testIdentifier()
   {
-    final DataSegment segment = DataSegment.builder()
-                                           .dataSource("foo")
-                                           .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                           .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
+    final DataSegment segment = DataSegment.builder(SegmentId.of(
+                                               "foo",
+                                               Intervals.of("2012-01-01/2012-01-02"),
+                                               DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                               NoneShardSpec.instance()
+                                           ))
                                            .shardSpec(NoneShardSpec.instance())
-                                           .size(0)
                                            .build();
 
     Assert.assertEquals(
@@ -337,12 +292,13 @@ public class DataSegmentTest
   @Test
   public void testIdentifierWithZeroPartition()
   {
-    final DataSegment segment = DataSegment.builder()
-                                           .dataSource("foo")
-                                           .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                           .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                           .shardSpec(getShardSpec(0))
-                                           .size(0)
+    final DataSegment segment = DataSegment.builder(SegmentId.of(
+                                               "foo",
+                                               Intervals.of("2012-01-01/2012-01-02"),
+                                               DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                               new NumberedShardSpec(0, 0)
+                                           ))
+                                           .shardSpec(new NumberedShardSpec(0, 0))
                                            .build();
 
     Assert.assertEquals(
@@ -354,12 +310,13 @@ public class DataSegmentTest
   @Test
   public void testIdentifierWithNonzeroPartition()
   {
-    final DataSegment segment = DataSegment.builder()
-                                           .dataSource("foo")
-                                           .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                           .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                           .shardSpec(getShardSpec(7))
-                                           .size(0)
+    final DataSegment segment = DataSegment.builder(SegmentId.of(
+                                               "foo",
+                                               Intervals.of("2012-01-01/2012-01-02"),
+                                               DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                               new NumberedShardSpec(7, 0)
+                                           ))
+                                           .shardSpec(new NumberedShardSpec(7, 0))
                                            .build();
 
     Assert.assertEquals(
@@ -376,7 +333,7 @@ public class DataSegmentTest
         Intervals.of("2012-01-01/2012-01-02"),
         DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
         null
-    )).size(1).build();
+    )).build();
 
     final DataSegment segment2 = MAPPER.readValue(MAPPER.writeValueAsString(segment), DataSegment.class);
     Assert.assertEquals("empty dimensions", ImmutableList.of(), segment2.getDimensions());
@@ -395,37 +352,34 @@ public class DataSegmentTest
         MAPPER.convertValue(Map.of("test2", "map2"), GranularitySpec.class),
         null
     );
-    final DataSegment segment1 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(getShardSpec(7))
-                                            .size(0)
+    final DataSegment segment1 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                0
+                                            ))
                                             .lastCompactionState(compactionState)
                                             .build();
-    final DataSegment segment2 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(getShardSpec(7))
-                                            .size(0)
+    final DataSegment segment2 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                0
+                                            ))
                                             .build();
-    Assert.assertEquals(segment1, segment2.withLastCompactionState(compactionState));
+    Assert.assertEquals(segment1.toString(), segment2.withLastCompactionState(compactionState).toString());
   }
 
   @Test
   public void testAnnotateWithLastCompactionState()
   {
     DynamicPartitionsSpec dynamicPartitionsSpec = new DynamicPartitionsSpec(null, null);
-    DimensionsSpec dimensionsSpec = new DimensionsSpec(DimensionsSpec.getDefaultSchemas(ImmutableList.of(
-        "bar",
-        "foo"
-    )));
+    DimensionsSpec dimensionsSpec = new DimensionsSpec(DimensionsSpec.getDefaultSchemas(List.of("bar", "foo")));
     List<AggregatorFactory> metricsSpec = ImmutableList.of(new CountAggregatorFactory("count"));
     CompactionTransformSpec transformSpec = new CompactionTransformSpec(
         new SelectorDimFilter("dim1", "foo", null)
     );
-    IndexSpec indexSpec = MAPPER.convertValue(Map.of("test", "map"), IndexSpec.class);
+    IndexSpec indexSpec = MAPPER.convertValue(Map.of("test", "map"), IndexSpec.class).getEffectiveSpec();
     GranularitySpec granularitySpec = MAPPER.convertValue(Map.of("test2", "map"), GranularitySpec.class);
 
     final CompactionState compactionState = new CompactionState(
@@ -446,66 +400,64 @@ public class DataSegmentTest
             transformSpec,
             indexSpec,
             granularitySpec,
-            ImmutableList.of()
+            null
         );
 
-    final DataSegment segment1 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(getShardSpec(7))
-                                            .size(0)
+    final DataSegment segment1 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                0
+                                            ))
                                             .lastCompactionState(compactionState)
                                             .build();
-    final DataSegment segment2 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(getShardSpec(7))
-                                            .size(0)
+    final DataSegment segment2 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                0
+                                            ))
                                             .build();
-    Assert.assertEquals(ImmutableSet.of(segment1), addCompactionStateFunction.apply(ImmutableSet.of(segment2)));
+    final DataSegment annotatedSegment = Iterables.getOnlyElement(addCompactionStateFunction.apply(Set.of(segment2)));
+    Assert.assertEquals(segment1.toString(), annotatedSegment.toString());
   }
 
   @Test
   public void testTombstoneType()
   {
 
-    final DataSegment segment1 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(new TombstoneShardSpec())
-                                            .loadSpec(Map.of(
-                                                "type",
-                                                DataSegment.TOMBSTONE_LOADSPEC_TYPE
+    final DataSegment segment1 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                new TombstoneShardSpec()
                                             ))
-                                            .size(0)
+                                            .shardSpec(new TombstoneShardSpec())
+                                            .loadSpec(Map.of("type", DataSegment.TOMBSTONE_LOADSPEC_TYPE))
                                             .build();
     Assert.assertTrue(segment1.isTombstone());
     Assert.assertFalse(segment1.hasData());
 
-    final DataSegment segment2 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(getShardSpec(7))
-                                            .loadSpec(Map.of(
-                                                "type",
-                                                "foo"
+    final DataSegment segment2 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                new NumberedShardSpec(7, 0)
                                             ))
-                                            .size(0)
+                                            .shardSpec(new NumberedShardSpec(7, 0))
+                                            .loadSpec(Map.of("type", "foo"))
                                             .build();
 
     Assert.assertFalse(segment2.isTombstone());
     Assert.assertTrue(segment2.hasData());
 
-    final DataSegment segment3 = DataSegment.builder()
-                                            .dataSource("foo")
-                                            .interval(Intervals.of("2012-01-01/2012-01-02"))
-                                            .version(DateTimes.of("2012-01-01T11:22:33.444Z").toString())
-                                            .shardSpec(getShardSpec(7))
-                                            .size(0)
+    final DataSegment segment3 = DataSegment.builder(SegmentId.of(
+                                                "foo",
+                                                Intervals.of("2012-01-01/2012-01-02"),
+                                                DateTimes.of("2012-01-01T11:22:33.444Z").toString(),
+                                                new NumberedShardSpec(7, 0)
+                                            ))
+                                            .shardSpec(new NumberedShardSpec(7, 0))
                                             .build();
 
     Assert.assertFalse(segment3.isTombstone());
@@ -602,7 +554,7 @@ public class DataSegmentTest
     final String fingerprint = "test_fingerprint_12345";
     final Interval interval = Intervals.of("2012-01-01/2012-01-02");
     final String version = DateTimes.of("2012-01-01T11:22:33.444Z").toString();
-    final ShardSpec shardSpec = getShardSpec(7);
+    final ShardSpec shardSpec = new NumberedShardSpec(7, 0);
     final SegmentId segmentId = SegmentId.of("foo", interval, version, shardSpec);
 
     final DataSegment segment1 = DataSegment.builder(segmentId)
@@ -616,21 +568,5 @@ public class DataSegmentTest
     DataSegment withFingerprint = segment2.withIndexingStateFingerprint(fingerprint);
     Assert.assertEquals(fingerprint, withFingerprint.getIndexingStateFingerprint());
     Assert.assertEquals(segment1, withFingerprint);
-  }
-
-  private static void assertAllFieldsEquals(DataSegment segment1, DataSegment segment2)
-  {
-    Assert.assertEquals(segment1.getDataSource(), segment2.getDataSource());
-    Assert.assertEquals(segment1.getInterval(), segment2.getInterval());
-    Assert.assertEquals(segment1.getVersion(), segment2.getVersion());
-    Assert.assertEquals(segment1.getLoadSpec(), segment2.getLoadSpec());
-    Assert.assertEquals(segment1.getDimensions(), segment2.getDimensions());
-    Assert.assertEquals(segment1.getMetrics(), segment2.getMetrics());
-    Assert.assertEquals(segment1.getProjections(), segment2.getProjections());
-    Assert.assertEquals(segment1.getShardSpec(), segment2.getShardSpec());
-    Assert.assertEquals(segment1.getSize(), segment2.getSize());
-    Assert.assertEquals(segment1.getBinaryVersion(), segment2.getBinaryVersion());
-    Assert.assertEquals(segment1.getId(), segment2.getId());
-    Assert.assertEquals(segment1.getLastCompactionState(), segment2.getLastCompactionState());
   }
 }
